--- a/FoodForGardens/about.css
+++ b/FoodForGardens/about.css
@@ -303,7 +303,7 @@ footer img{
 footer h2{
     /* font-family: 'Merriweather', serif; */
     font-family: 'Nothing You Could Do', cursive;
-    font-size 1rem;
+    font-size: 1 rem;
 
 }
 
